# BB_Launcher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  bblauncher.cpp  bblauncher.h  bblauncher.rc  bblauncher.ui  main.cpp
.ci/: clang-format.sh
.github/: linux-appimage-qt.sh
.github/workflows/: build.yml
documents/: building-docker.md  building-windows.md
documents/Docker Builder/: docker-compose.yml
documents/Docker Builder/.devcontainer/: devcontainer.json
documents/Docker Builder/.docker/: Dockerfile
modules/: ChaliceEditor.cpp  ChaliceEditor.h  ChaliceEditor.ui  ChaliceInfo.h  Common.cpp  Common.h  Log.cpp  Log.h  ModDownloader.cpp  ModDownloader.h  ModDownloader.ui  ModManager.cpp  ModManager.h  ModManager.ui  ModMerger.cpp  ModMerger.h  ModMerger.ui  PkgExtractor.cpp  PkgExtractor.h  QAnsiTextEdit.cpp  QAnsiTextEdit.h  QmlObject.cpp  QmlObject.h  RunGuard.cpp  RunGuard.h  SaveManager.cpp  SaveManager.h  SaveManager.ui  TrophyManager.cpp  TrophyManager.h  TrophyManager.ui  bblauncher.cpp  bblauncher.h  bblauncher.ui  scope_exit.h  version_dialog.cpp  version_dialog.h  version_dialog.ui
modules/BBFormats/: BBFormats.cpp  BBFormats.h  Bnd.cpp  Bnd.h  ConflictHandler.cpp  ConflictHandler.h  Dcx.cpp  Dcx.h  DrawParam.cpp  DrawParam.h  Emevd.cpp  Emevd.h  Esd.cpp  Esd.h  Fmg.cpp  Fmg.h  GameParam.cpp  GameParam.h  GameParamDef.cpp  Gparam.cpp  Gparam.h  Msb.cpp  Msb.h  Tpf.cpp  Tpf.h
modules/PkgDeps/: bcrypto.cpp  bcrypto.h  crypto.h  loader.cpp  loader.h  pfs.h  pkg.cpp  pkg.h  pkg_type.h
modules/TrophyDeps/: aes.h  concepts.h  crypto.cpp  crypto.h  enum.h  io_file.cpp  io_file.h  npbind.h  nt_api.cpp  nt_api.h  trp.cpp  trp.h
modules/ipc/: ipc_client.cpp  ipc_client.h
qtstatic/include/QtCore/: qconfig.h
qtstatic/include/QtDesigner/: QtDesignerDepends
qtstatic/include/QtGui/: qtgui-config.h
qtstatic/include/QtHelp/: QtHelpDepends
qtstatic/include/QtLabsAnimation/: QtLabsAnimationDepends
qtstatic/include/QtLabsFolderListModel/: QtLabsFolderListModelDepends
qtstatic/include/QtLabsPlatform/: QtLabsPlatformDepends
qtstatic/include/QtLabsQmlModels/: QtLabsQmlModelsDepends
qtstatic/include/QtLabsSharedImage/: QtLabsSharedImageDepends
qtstatic/include/QtLabsSynchronizer/: QtLabsSynchronizerDepends
qtstatic/include/QtLabsWavefrontMesh/: QtLabsWavefrontMeshDepends
qtstatic/include/QtMultimedia/: QtMultimediaDepends
qtstatic/include/QtMultimediaQuick/: QtMultimediaQuickDepends
qtstatic/include/QtNetwork/: QtNetwork
qtstatic/include/QtNetworkAuth/: QtNetworkAuthDepends
qtstatic/include/QtQmlCompiler/: QtQmlCompilerDepends
qtstatic/include/QtQmlLocalStorage/: QtQmlLocalStorageDepends
qtstatic/include/QtQmlXmlListModel/: QtQmlXmlListModelDepends
qtstatic/include/QtQuick/: QtQuickDepends
qtstatic/include/QtQuickControls2/: QtQuickControls2Depends
qtstatic/lib/: Qt6BundledFreetype.lib  Qt6BundledGlslang_Osdependent.lib  Qt6BundledGlslang_Spirv.lib  Qt6BundledLibjpeg.lib  Qt6BundledLibjpeg12bits.lib  Qt6BundledLibjpeg16bits.lib  Qt6BundledLibpng.lib  Qt6BundledPcre2.lib  Qt6BundledTLSF.lib  Qt6BundledZLIB.lib  Qt6Bundled_Clip2Tri.lib  Qt6Bundled_Clipper.lib  Qt6Bundled_Poly2Tri.lib  Qt6Concurrent.lib  Qt6DeviceDiscoverySupport.lib  Qt6EntryPoint.lib  Qt6ExampleIcons.lib  Qt6ExamplesAssetDownloader.lib  Qt6FbSupport.lib  Qt6Help.lib  Qt6HttpServer.lib  Qt6JsonRpc.lib  Qt6LabsAnimation.lib  Qt6LabsFolderListModel.lib  Qt6LabsPlatform.lib  Qt6LabsQmlModels.lib  Qt6LabsSettings.lib  Qt6LabsSharedImage.lib  Qt6LabsSynchronizer.lib  Qt6LabsWavefrontMesh.lib  Qt6MultimediaQuick.lib  Qt6MultimediaTestLib.lib  Qt6MultimediaWidgets.lib  Qt6NetworkAuth.lib  Qt6OpenGL.lib  Qt6OpenGLWidgets.lib  Qt6PacketProtocol.lib  Qt6Positioning.lib  Qt6PositioningQuick.lib  Qt6PrintSupport.lib  (+40 more)
qtstatic/metatypes/: qt6designer_metatypes.json  qt6designercomponentsprivate_metatypes.json  qt6gui_metatypes.json  qt6network_metatypes.json
qtstatic/mkspecs/: qconfig.pri  qmodule.pri
qtstatic/modules/: Concurrent.json  Core.json  DBus.json  Designer.json  DesignerComponentsPrivate.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  ExampleIconsPrivate.json  ExamplesAssetDownloaderPrivate.json  FbSupportPrivate.json  FreetypePrivate.json  Gui.json  HarfbuzzPrivate.json  Help.json  HttpServer.json  JpegPrivate.json  JsonRpcPrivate.json  LabsAnimation.json  LabsFolderListModel.json  LabsPlatform.json  LabsQmlModels.json  LabsSettings.json  LabsSharedImage.json  LabsSynchronizer.json  LabsWavefrontMesh.json  LanguageServerPrivate.json  Linguist.json  Multimedia.json  MultimediaQuickPrivate.json  MultimediaTestLibPrivate.json  MultimediaWidgets.json  Network.json  NetworkAuth.json  OpenGL.json  OpenGLWidgets.json  PacketProtocolPrivate.json  PngPrivate.json  Positioning.json  PositioningQuick.json  PrintSupport.json  (+62 more)
qtstatic/qml/QtQml/: qmlplugin.lib
qtstatic/sbom/: qtbase-6.10.0.spdx  qtdeclarative-6.10.0.spdx  qthttpserver-6.10.0.spdx  qtimageformats-6.10.0.spdx  qtlanguageserver-6.10.0.spdx  qtmultimedia-6.10.0.spdx  qtnetworkauth-6.10.0.spdx  qtpositioning-6.10.0.spdx  qtshadertools-6.10.0.spdx  qttools-6.10.0.spdx  qttranslations-6.10.0.spdx  qtwebsockets-6.10.0.spdx  qtwebview-6.10.0.spdx
settings/: LauncherSettings.cpp  LauncherSettings.h  LauncherSettings.ui  RightClickButton.cpp  RightClickButton.h  ShadCheatsPatches.cpp  ShadCheatsPatches.h  ShadSettings.cpp  ShadSettings.h  ShadSettings.ui  ShadUpdate.cpp  ShadUpdate.h  config.cpp  config.h  control_settings.cpp  control_settings.h  control_settings.ui  emulator_settings.cpp  emulator_settings.h  formatting.h  hotkeys.cpp  hotkeys.h  hotkeys.ui  kbm_config_dialog.cpp  kbm_config_dialog.h  kbm_gui.cpp  kbm_gui.h  kbm_gui.ui  key_manager.cpp  key_manager.h  right_click_button.cpp  table_item_delegate.cpp  toml.hpp  user_manager.cpp  user_manager.h  user_manager_dialog.cpp  user_manager_dialog.h  user_settings.cpp  user_settings.h
settings/PSF/: psf.cpp  psf.h
settings/updater/: BuildInfo.cpp.in  BuildInfo.h  CheckUpdate.cpp  CheckUpdate.h
(+1048 files in other folders)
